# olympic-nsu-VKI

./: CMakeLists.txt  README.md  dir_manager.py
1/1/: answer.c  answer.cpp
1/1/tests/: 11.in  13.in
1/2/: answer.c  answer.cpp
1/2/tests/: 10.in  10.out  3.out  6.in  6.out  7.out  8.out
1/3/: answer.c  answer.cpp
1/3/tests/: 11.in  11.out  4.in  4.out  5.in  5.out  7.in  8.in  9.in  9.out
1/4/: answer.c  answer.cpp
1/4/tests/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out
2 сем/2.1/1/: answer.cpp
2 сем/2.1/10/: answer.cpp
2 сем/2.1/2/: answer.cpp
2 сем/2.1/3/: answer.cpp
2 сем/2.1/4/: answer.cpp
2 сем/2.1/5/: answer.cpp
2 сем/2.1/6/: answer.cpp
2 сем/2.1/7/: answer.cpp
2 сем/2.1/8/: answer.cpp
2/1/: answer.cpp
2/1/tests/: 10.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
2/2/: answer.cpp
2/2/tests/: 5.out  6.out  7.out  9.out
2/3/: answer.cpp
2/3/tests/: 10.out  4.out  6.out  7.out  9.out
2/4/: answer.cpp
2/4/tests/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  (+1 more)
2/5/: answer.cpp
3/1/: answer.cpp
3/2/: answer.cpp
3/3/: answer.cpp
3/4/: answer.cpp
3/5/: answer.cpp
4/1/: answer.cpp
4/2/: answer.cpp
4/3/: answer.cpp
4/4/: answer.cpp
4/5/: answer.cpp
5/1/: answer.cpp
5/2/: answer.cpp
5/3/: answer.cpp
5/4/: answer.cpp
6/1/: answer.cpp
6/2/: answer.cpp
6/3/: answer.cpp
6/4/: answer.cpp
7/1/: answer.cpp
7/2/: answer.cpp
7/3/: answer.cpp
8/1/: answer.cpp
8/2/: answer.cpp
8/3/: answer.c  answer.cpp
9/1/: answer.cpp
9/10/: answer.cpp
9/2/: answer.cpp
9/3/: answer.cpp
9/4/: answer.cpp
9/5/: answer.cpp
9/6/: answer.cpp
9/7/: answer.cpp
9/8/: answer.cpp
9/9/: answer.cpp
(+683 files in other folders)
