cmake_minimum_required(VERSION 3.23)
project(olympic_nsu_VKI)

set(CMAKE_CXX_STANDARD 14)

add_executable(olympic_nsu_VKI
        1/1/answer.c
        1/1/answer.cpp
        1/2/answer.c
        1/2/answer.cpp
        1/3/answer.c
        1/3/answer.cpp
        1/4/answer.c
        1/4/answer.cpp
        2/1/answer.c
        2/1/answer.cpp
        2/2/answer.c
        2/2/answer.cpp
        2/3/answer.c
        2/3/answer.cpp
        2/4/tests/check.cpp
        2/4/answer.c
        2/4/answer.cpp
        2/5/answer.c
        2/5/answer.cpp
        3/1/answer.c
        3/1/answer.cpp
        3/2/answer.c
        3/2/answer.cpp
        3/3/answer.c
        3/3/answer.cpp
        3/4/answer.c
        3/4/answer.cpp
        3/5/answer.c
        3/5/answer.cpp
        3/6/answer.c
        3/6/answer.cpp
        4/1/answer.c
        4/1/answer.cpp
        4/2/answer.c
        4/2/answer.cpp
        4/3/answer.c
        4/3/answer.cpp
        4/4/answer.c
        4/4/answer.cpp
        4/5/answer.c
        4/5/answer.cpp
        5/1/answer.c
        5/1/answer.cpp
        5/2/answer.c
        5/2/answer.cpp
        5/3/answer.c
        5/3/answer.cpp
        5/4/answer.c
        5/4/answer.cpp
        6/1/answer.c
        6/1/answer.cpp
        6/2/answer.c
        6/2/answer.cpp
        6/3/answer.c
        6/3/answer.cpp
        6/4/answer.c
        6/4/answer.cpp
        7/1/answer.c
        7/1/answer.cpp
        7/2/answer.c
        7/2/answer.cpp
        7/3/answer.c
        7/3/answer.cpp
        8/1/answer.c
        8/1/answer.cpp
        8/2/answer.c
        8/2/answer.cpp
        8/3/answer.c
        8/3/answer.cpp)
